fix display overflow

--- a/static/styles.css
+++ b/static/styles.css
@@ -36,6 +36,8 @@ body {
     padding: 5px;
     border-bottom: 1px solid #ccc;
     text-align: center;
+    overflow-x: auto;
+    white-space: nowrap;
 }
 
 .error-text {
@@ -64,4 +66,6 @@ body {
     padding: 10px;
     box-sizing: border-box;
     text-align: center;
+    overflow-x: auto;
+    white-space: nowrap;
 }
